Fix Header DOM Shifts on Route Change (#113)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,9 @@
   --background: #121212;
   --foreground: #121212;
 }
-
+body {
+  overflow-y: scroll;
+}
 h1 {
   font-size: 2rem;
 }
